<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cinza"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="112dp"
        android:layout_height="112dp"
        app:srcCompat="@drawable/c578d09299e1493baaba40316f20a3a4" />

    <TextView
        android:id="@+id/preencha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="48dp"
        android:textColor="@color/black"
        android:layout_marginBottom="0dp"
        android:text="@string/por_favor_preencha_abaixo"
        android:textSize="24dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="144dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/editNome"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:hint="@string/nome"
            android:inputType="text"
            android:textColorHint="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/editMassa"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/massa_kg"
            android:inputType="numberDecimal"
            android:textColorHint="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editAltura"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/altura_m"
            android:inputType="numberDecimal"
            android:textColorHint="@color/black"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rgClassificacaoIdade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/Adulto"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/adulto"
                android:textColor="@color/black"


                />

            <RadioButton
                android:id="@+id/Idoso"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/idoso"
                android:textColor="@color/black" />
        </RadioGroup>

        <Button
            android:id="@+id/submitCalcular"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:text="@string/calcular" />

    </LinearLayout>

</RelativeLayout>
